Fix chat icon in dark mode.

--- a/src/style.css
+++ b/src/style.css
@@ -188,6 +188,9 @@ input {
   opacity: 0.2;
   flex-shrink: 0;
 }
+.chat-row path {
+  fill: var(--text);
+}
 .chat-row .name,
 .header-container .name {
   font-weight: 600;
